--- a/renovate.json
+++ b/renovate.json
@@ -21,13 +21,8 @@
         "@changesets/apply-release-plan",
         "@changesets/assemble-release-plan"
       ],
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "minor",
-        "patch"
-      ],
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["minor", "patch"],
       "groupName": "all non-major dependencies",
       "groupSlug": "all-minor-patch"
     }
