--- a/packages/eslint-config-guild/package.json
+++ b/packages/eslint-config-guild/package.json
@@ -3,10 +3,25 @@
   "version": "0.0.0",
   "description": "Guild's ESLint shareable config for TypeScript/React projects",
   "main": "src/index.js",
-  "repository": "https://github.com/the-guild-org/shared-config",
+  "repository": {
+    "url": "the-guild-org/shared-config",
+    "directory": "packages/eslint-config-guild"
+  },
   "author": "The Guild <contact@the-guild.dev> (https://the-guild.dev)",
   "license": "MIT",
   "private": false,
+  "dependencies": {
+    "@rushstack/eslint-patch": "1.1.3",
+    "@typescript-eslint/parser": "5.19.0",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "eslint-plugin-sonarjs": "0.13.0",
+    "eslint-plugin-unicorn": "42.0.0"
+  },
+  "optionalDependencies": {
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
+    "eslint-plugin-jsx-a11y": "6.5.1"
+  },
   "peerDependencies": {
     "eslint": "^8"
   }
