--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "8.13.0",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.3"
   },
   "scripts": {
     "lint": "eslint --ignore-path .gitignore .",
