--- a/packages/eslint-config-guild/package.json
+++ b/packages/eslint-config-guild/package.json
@@ -2,7 +2,6 @@
   "name": "eslint-config-guild",
   "version": "0.0.0",
   "description": "Guild's ESLint shareable config for TypeScript/React projects",
-  "main": "src/index.js",
   "repository": {
     "url": "the-guild-org/shared-config",
     "directory": "packages/eslint-config-guild"
@@ -10,17 +9,23 @@
   "author": "The Guild (https://the-guild.dev)",
   "license": "MIT",
   "private": false,
+  "exports": {
+    ".": "./src/index.cjs",
+    "./*": "./src/*.cjs"
+  },
   "dependencies": {
-    "@rushstack/eslint-patch": "1.1.3",
-    "@typescript-eslint/parser": "5.19.0",
+    "@rushstack/eslint-patch": "1.0.8",
     "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-sonarjs": "0.13.0",
     "eslint-plugin-unicorn": "42.0.0"
   },
   "optionalDependencies": {
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.4.0",
-    "eslint-plugin-jsx-a11y": "6.5.1"
+    "eslint-plugin-react-hooks": "4.4.0"
   },
   "peerDependencies": {
     "eslint": "^8"
