--- a/packages/eslint-config-guild/package.json
+++ b/packages/eslint-config-guild/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-guild",
+  "name": "@theguild/eslint-config",
   "version": "0.0.0",
   "description": "Guild's ESLint shareable config for TypeScript/React projects",
   "repository": {
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@rushstack/eslint-patch": "^1.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-promise": "^6.0.0",
@@ -25,6 +25,7 @@
   },
   "optionalDependencies": {
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-mdx": "^1.17.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0"
   },
