--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -2,7 +2,7 @@ name: Canary Release
 
 on:
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   changes:
@@ -42,18 +42,17 @@ jobs:
           echo "machine github.com login theguild-bot password ${{secrets.GH_API_TOKEN}}" > ~/.netrc
 
       - name: Setup NPM credentials
-        run: echo "//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
+        run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
       - name: Cache Yarn
         uses: actions/cache@v3
         with:
           path: '**/node_modules'
-          key: ${{runner.os}}-16-node-modules-${{hashFiles('yarn.lock')}}
+          key: ${{runner.os}}-16-${{hashFiles('yarn.lock')}}
           restore-keys: |
-            ${{runner.os}}-16-node-modules-${{hashFiles('yarn.lock')}}
-            ${{runner.os}}-16-node-modules-
+            ${{runner.os}}-16-
 
       - name: Install Dependencies
         run: yarn
@@ -63,7 +62,7 @@ jobs:
         uses: kamilkisiela/release-canary@master
         if: github.repository == 'the-guild-org/shared-config'
         with:
-          npm-token: ${{secrets.NODE_AUTH_TOKEN}}
+          npm-token: ${{secrets.NPM_TOKEN}}
           npm-script: 'yarn release:canary'
           changesets: true
 
