--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Master
+      - name: Checkout Main
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -18,12 +18,12 @@ jobs:
           git config --global user.name "theguild-bot"
           echo "machine github.com login theguild-bot password ${{secrets.GITHUB_TOKEN}}" > ~/.netrc
 
-      - name: Add origin remote and refetch master
+      - name: Add origin remote and refetch main
         run: |
           git remote rm origin
           git remote add origin "https://github.com/${{github.repository}}"
           git fetch
-          git checkout master
+          git checkout main
           git reset --hard
 
       - name: Use Node
