--- a/renovate.json
+++ b/renovate.json
@@ -16,11 +16,20 @@
       "prPriority": 5
     },
     {
-      "excludePackageNames": ["@changesets/cli", "@changesets/apply-release-plan", "@changesets/assemble-release-plan"],
+      "excludePackageNames": [
+        "@changesets/cli",
+        "@changesets/apply-release-plan",
+        "@changesets/assemble-release-plan",
+        "typescript"
+      ],
       "matchPackagePatterns": ["*"],
       "matchUpdateTypes": ["minor", "patch"],
       "groupName": "all non-major dependencies",
       "groupSlug": "all-minor-patch"
+    },
+    {
+      "matchPackageNames": "typescript",
+      "automerge": false
     }
   ],
   "timezone": "Europe/Warsaw",
