--- a/.github/workflows/changesets-dependencies.yaml
+++ b/.github/workflows/changesets-dependencies.yaml
@@ -1,9 +1,8 @@
 on:
   workflow_call:
-    inputs:
+    secrets:
       githubToken:
         required: true
-        type: string
 
 jobs:
   changeset:
