--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -24,7 +24,7 @@ on:
         required: true
 
 jobs:
-  snapshot:
+  publish:
     runs-on: ubuntu-latest
     if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
