--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -57,8 +57,8 @@ jobs:
         id: vars
         shell: bash
         run: |
-          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
           echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+          echo "::set-output name=date::$(date +"%B %d, %Y")"
 
       - name: release / pull_request
         id: changesets
@@ -68,7 +68,7 @@ jobs:
           commit: 'chore(release): update monorepo packages versions'
           title: 'Upcoming Release Changes'
           createGithubReleases: ${{ inputs.createGithubReleases }}
-          githubReleaseName: ${{ inputs.githubReleaseName || 'Release ${{ steps.vars.outputs.sha_short }} (from ${{ steps.vars.outputs.branch }})' }}
+          githubReleaseName: ${{ inputs.githubReleaseName || '${{ steps.vars.outputs.date }} (${{ steps.vars.outputs.sha_short }})' }}
         env:
           NPM_TOKEN: ${{ secrets.npmToken }}
           GITHUB_TOKEN: ${{ secrets.githubToken }}
