--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -27,7 +27,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.head.repo.full_name == github.repository
+    # if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - name: checkout
         uses: actions/checkout@v3
