--- a/.github/workflows/changesets-dependencies.yaml
+++ b/.github/workflows/changesets-dependencies.yaml
@@ -1,5 +1,6 @@
 # Note: this is a shared pipeline used by other repositories. 
- 
+# Docs: https://docs.github.com/en/actions/using-workflows/reusing-workflows
+
 on:
   workflow_call:
     secrets:
