--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -1,4 +1,5 @@
 # Note: this is a shared pipeline used by other repositories. 
+# Docs: https://docs.github.com/en/actions/using-workflows/reusing-workflows
 
 on:
   workflow_call:
@@ -26,29 +27,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
+      - uses: .github/workflows/setup.yml
         with:
-          fetch-depth: 0
-
-      - name: setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ inputs.nodeVersion }}
-          cache: 'yarn'
-
-      - name: cache yarn
-        uses: actions/cache@v3
-        id: node-modules-cache-release
-        with:
-          path: '**/node_modules'
-          key: ${{runner.os}}-${{ inputs.nodeVersion }}-node-modules-${{hashFiles('yarn.lock')}}
-          restore-keys: |
-            ${{runner.os}}-${{ inputs.nodeVersion }}-node-modules-
-
-      - name: yarn install
-        run: yarn install --ignore-engines --frozen-lockfile --immutable
-        if: steps.node-modules-cache-release.outputs.cache-hit != 'true'
+          nodeVersion: ${{inputs.nodeVersion}}
 
       - name: ${{ inputs.npmTag }} release
         uses: 'the-guild-org/changesets-snapshot-action@v0.0.1'
