--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
-      - uses: .github/workflows/setup.yml
+      - uses: ./.github/workflows/setup.yml
         with:
           nodeVersion: ${{inputs.nodeVersion}}
 
