--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -29,7 +29,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: .github/workflows/setup.yml
+      - uses: ./.github/workflows/setup.yml
         with:
           nodeVersion: ${{inputs.nodeVersion}}
 
