--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -29,7 +29,12 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/workflows/setup
+      - name: checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/workflows/setup.yml
         with:
           nodeVersion: ${{inputs.nodeVersion}}
 
