--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: ./.github/workflows/setup.yml
+      - uses: ./.github/workflows/setup
         with:
           nodeVersion: ${{inputs.nodeVersion}}
 
