--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -35,6 +35,7 @@ jobs:
           fetch-depth: 0
 
       - uses: ./.github/workflows/setup
+        id: setup env
         with:
           nodeVersion: ${{inputs.nodeVersion}}
 
