--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -33,6 +33,7 @@ jobs:
           fetch-depth: 0
 
       - uses: ./.github/workflows/setup
+        id: setup env
         with:
           nodeVersion: ${{inputs.nodeVersion}}
 
