--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,7 +27,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - uses: the-guild-org/shared-config/.github/workflows/setup@shared-setup
+      - uses: the-guild-org/shared-config/setup@shared-setup
         name: setup env
         with:
           nodeVersion: ${{inputs.nodeVersion}}
