--- a/.github/workflows/ci-node-matrix.yml
+++ b/.github/workflows/ci-node-matrix.yml
@@ -14,7 +14,7 @@ on:
       nodeVersions:
         required: true
         type: string
-        default: '[16, 18]'
+        default: '[18]'
 
 jobs:
   ci_setup:
