--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -24,8 +24,11 @@ on:
 
 jobs:
   snapshot:
+  
     runs-on: ubuntu-latest
     if: github.event.pull_request.head.repo.full_name == github.repository
+    outputs:
+      published: ${{ steps.changesets.outputs.published }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -38,6 +41,7 @@ jobs:
           nodeVersion: ${{inputs.nodeVersion}}
 
       - name: ${{ inputs.npmTag }} release
+        id: changesets
         uses: 'the-guild-org/changesets-snapshot-action@v0.0.1'
         with:
           tag: ${{ inputs.npmTag }}
