--- a/.github/workflows/ci-node-matrix.yml
+++ b/.github/workflows/ci-node-matrix.yml
@@ -35,7 +35,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - uses: the-guild-org/shared-config/setup@shared-setup
+      - uses: the-guild-org/shared-config/setup@main
         name: setup env
         with:
           nodeVersion: ${{matrix.nodeVersion }}
