--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - uses: the-guild-org/shared-config/setup@shared-setup
+      - uses: the-guild-org/shared-config/setup@main
         name: setup env
         with:
           nodeVersion: ${{inputs.nodeVersion}}
