--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: the-guild-org/shared-config/setup@shared-setup
+      - uses: the-guild-org/shared-config/setup@main
         name: setup env
         with:
           nodeVersion: ${{inputs.nodeVersion}}
