--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: the-guild-org/shared-config/setup@shared-setup
+      - uses: the-guild-org/shared-config/setup@main
         name: setup env
         with:
           nodeVersion: ${{inputs.nodeVersion}}
