--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -1,4 +1,5 @@
 # Note: this is a shared pipeline used by other repositories. 
+# Docs: https://docs.github.com/en/actions/using-workflows/reusing-workflows
 
 on:
   workflow_call:
@@ -27,31 +28,18 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    # if: github.event.pull_request.head.repo.full_name == github.repository
+    outputs:
+      published: ${{ steps.changesets.outputs.published }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: setup node
-        uses: actions/setup-node@v3
+      - uses: the-guild-org/shared-config/setup@main
+        name: setup env
         with:
-          node-version: ${{ inputs.nodeVersion }}
-          cache: 'yarn'
-
-      - name: cache yarn
-        uses: actions/cache@v3
-        id: node-modules-cache-release
-        with:
-          path: '**/node_modules'
-          key: ${{runner.os}}-${{ inputs.nodeVersion }}-node-modules-${{hashFiles('yarn.lock')}}
-          restore-keys: |
-            ${{runner.os}}-${{ inputs.nodeVersion }}-node-modules-
-
-      - name: yarn install
-        run: yarn install --ignore-engines --frozen-lockfile --immutable
-        if: steps.node-modules-cache-release.outputs.cache-hit != 'true'
+          nodeVersion: ${{inputs.nodeVersion}}
 
       - name: set version variables
         id: vars
