--- a/setup/action.yml
+++ b/setup/action.yml
@@ -8,6 +8,10 @@ inputs:
     description: 'NodeJS Version to use'
     required: true
     default: '18'
+  workingDirectory:
+    description: 'Working directory'
+    required: false
+    default: './'
 runs:
   using: composite
   steps:
@@ -30,3 +34,4 @@ runs:
         shell: bash
         run: yarn install --ignore-engines --frozen-lockfile --immutable
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
+        working-directory: ${{ inputs.workingDirectory }}
