--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -4,6 +4,10 @@
 on:
   workflow_call:
     inputs:
+      packageManager:
+        type: string
+        required: false
+        default: yarn
       nodeVersion:
         required: false
         type: number
@@ -39,6 +43,7 @@ jobs:
         name: setup env
         with:
           nodeVersion: ${{inputs.nodeVersion}}
+          packageManager: ${{inputs.packageManager}}
 
       - name: ${{ inputs.npmTag }} release
         id: changesets
