--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,10 @@ on:
         required: false
         type: number
         default: 18
+      packageManager:
+        type: string
+        required: false
+        default: yarn
       annotations:
         required: false
         type: boolean
@@ -38,6 +42,7 @@ jobs:
         name: setup env
         with:
           nodeVersion: ${{inputs.nodeVersion}}
+          packageManager: ${{inputs.packageManager}}
 
       - name: lint
         run: ${{ inputs.script || 'yarn eslint --output-file eslint_report.json --format json .' }}
