--- a/setup/action.yml
+++ b/setup/action.yml
@@ -12,26 +12,35 @@ inputs:
     description: 'Working directory'
     required: false
     default: './'
+  packageManager:
+    description: 'Package Manager'
+    required: false
+    default: yarn
 runs:
   using: composite
   steps:
+      - name: Setup ${{ inputs.packageManager }}
+        id: pnpm_setup
+        if: inputs.packageManager == 'pnpm' 
+        uses: pnpm/action-setup@v2.2.2
+        with:
+          version: 7
+          run_install: false
+
       - name: setup node
         uses: actions/setup-node@v3
         with:
           node-version: ${{ inputs.nodeVersion }}
-          cache: 'yarn'
-
-      - name: cache yarn
-        uses: actions/cache@v3
-        id: node-modules-cache
-        with:
-          path: '**/node_modules'
-          key: ${{runner.os}}-${{ inputs.nodeVersion }}-node-modules-${{hashFiles('yarn.lock')}}
-          restore-keys: |
-            ${{runner.os}}-${{ inputs.nodeVersion }}-node-modules-
+          cache: ${{ inputs.packageManager }}
 
       - name: yarn install
         shell: bash
+        if: inputs.packageManager == 'yarn' 
         run: yarn install --ignore-engines --frozen-lockfile --immutable
-        if: steps.node-modules-cache.outputs.cache-hit != 'true'
+        working-directory: ${{ inputs.workingDirectory }}
+
+      - name: pnpm install
+        shell: bash
+        if: inputs.packageManager == 'pnpm' 
+        run: pnpm install --frozen-lockfile
         working-directory: ${{ inputs.workingDirectory }}
