--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,7 +38,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - uses: the-guild-org/shared-config/setup@main
+      - uses: the-guild-org/shared-config/setup@pnpm-stuff
         name: setup env
         with:
           nodeVersion: ${{inputs.nodeVersion}}
