--- a/website-cf/action.yml
+++ b/website-cf/action.yml
@@ -58,3 +58,23 @@ runs:
           projectName: ${{ inputs.projectName }}
           directory: ${{ format('{0}/{1}', inputs.websiteDirectory, inputs.artifactDir) }}
           branch: ${{ inputs.prId != '' && format('pr-{0}', inputs.prId) || '' }}
+
+      - name: find pr comment
+        uses: peter-evans/find-comment@v2
+        id: fc
+        if: ${{ inputs.prId != '' }}
+        with:
+          issue-number: ${{ inputs.prId }}
+          comment-author: 'github-actions[bot]'
+          body-includes: <!--- website_deployment ---> 
+
+      - name: create/update comment
+        uses: peter-evans/create-or-update-comment@v2
+        if: ${{ inputs.prId != '' }}
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          issue-number: ${{ inputs.prId }}
+          body: |
+            <!--- website_deployment ---> 
+            TEST
+          edit-mode: replace
