Do not fail fast for node version matrix

--- a/.github/workflows/ci-node-matrix.yml
+++ b/.github/workflows/ci-node-matrix.yml
@@ -34,6 +34,7 @@ jobs:
     strategy:
       matrix:
         nodeVersion: ${{fromJson(needs.ci_setup.outputs.matrix)}}
+      fail-fast: false
     name: nodejs v${{ matrix.nodeVersion }}
     steps:
       - name: checkout
