--- a/.github/workflows/changesets-dependencies.yaml
+++ b/.github/workflows/changesets-dependencies.yaml
@@ -18,6 +18,6 @@ jobs:
           fetch-depth: 0
 
       - name: Create/Update Changesets
-        uses: 'the-guild-org/changesets-dependencies-action@main'
+        uses: 'the-guild-org/changesets-dependencies-action@prettier-fix'
         env:
           GITHUB_TOKEN: ${{ secrets.githubToken }}
