--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,7 @@
 {
   "extends": ["config:base"],
   "postUpdateOptions": ["yarnDedupeFewer"],
-  "automerge": true,
-  "major": {
-    "automerge": false
-  },
+  "automerge": false,
   "labels": ["dependencies"],
   "packageRules": [
     {
@@ -12,24 +9,8 @@
       "prPriority": -1
     },
     {
-      "matchPackagePatterns": ["^@theguild/", "^@guild-docs/"],
+      "matchPackagePatterns": ["^@theguild/"],
       "prPriority": 5
-    },
-    {
-      "excludePackageNames": [
-        "@changesets/cli",
-        "@changesets/apply-release-plan",
-        "@changesets/assemble-release-plan",
-        "typescript"
-      ],
-      "matchPackagePatterns": ["*"],
-      "matchUpdateTypes": ["minor", "patch"],
-      "groupName": "all non-major dependencies",
-      "groupSlug": "all-minor-patch"
-    },
-    {
-      "matchPackageNames": "typescript",
-      "automerge": false
     }
   ],
   "timezone": "Europe/Warsaw",
