fix(algolia): remove legacy time consuming steps + interpolate domain value

--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -27,14 +27,8 @@ jobs:
         with:
           nodeVersion: 18
 
-      - name: Build Packages
-        run: yarn build
-
-      - name: Build website
-        run: yarn workspace website build
-
       - name: Algolia generate
-        run: yarn workspace website theguild-nextra-algolia --o ${{ secrets.lockFilePath }} --domain https://www.graphql-code-generator.com/ --docsBaseDir ${{ secrets.docsBaseDir }} --dryrun true
+        run: yarn workspace website theguild-nextra-algolia --o ${{ secrets.lockFilePath }} --domain ${{ secrets.domain }} --docsBaseDir ${{ secrets.docsBaseDir }} --dryrun true
 
       - name: Prettier
         run: yarn prettier
